Fixed some spacing issues

--- a/src/components/Post/style.scss
+++ b/src/components/Post/style.scss
@@ -2,7 +2,7 @@
     border-radius: 1em;
     background: #eee;
     width: 100%;
-    margin: 1em;
+    margin: 1em 0;
 
     & * {
         border-radius: 1em;
@@ -17,7 +17,7 @@
         .caption {
             background: #00000055;
             color: white;
-            padding: 0.1em;
+            padding: 0.1em 0;
         }
     }
 }
